--- a/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/AboutEplusService/AboutEplusServiceTableViewCell/AboutEplusServiceTableViewCell.xib
+++ b/PositionIn/Classes/Application Layer/Stories/EplusMembership/Interface/AboutEplusService/AboutEplusServiceTableViewCell/AboutEplusServiceTableViewCell.xib
@@ -33,9 +33,9 @@
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwn-Sa-Agy">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label Label Label Label LabelLabel Label Label Label Label Label Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwn-Sa-Agy">
                                         <rect key="frame" x="0.0" y="25" width="225" height="18"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                         <color key="textColor" red="0.54117647058823526" green="0.54117647058823526" blue="0.54117647058823526" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -81,7 +81,7 @@
                 <outlet property="subTitle" destination="uwn-Sa-Agy" id="jSo-ak-5Ti"/>
                 <outlet property="title" destination="Tsn-Bj-RIu" id="psQ-fm-J35"/>
             </connections>
-            <point key="canvasLocation" x="449" y="298.5"/>
+            <point key="canvasLocation" x="237" y="187.5"/>
         </tableViewCell>
     </objects>
     <resources>
