--- a/PositionIn/Donate/DonatePaymentController/Interface/SuccessDonationInfoCell/SuccessDonationInfoCell.xib
+++ b/PositionIn/Donate/DonatePaymentController/Interface/SuccessDonationInfoCell/SuccessDonationInfoCell.xib
@@ -7,15 +7,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SuccessDonationInfoCell" customModule="PositionIn" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="373"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="486" id="KGk-i7-Jjw" customClass="SuccessDonationInfoCell" customModule="PositionIn" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="500"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="372.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="499.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tnw-8Y-uW4">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="373"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="500"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TDd-ab-IhH">
                                 <rect key="frame" x="96" y="32" width="129" height="81"/>
@@ -41,7 +41,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="200" verticalCompressionResistancePriority="749" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rj0-YJ-cPw">
-                                <rect key="frame" x="16" y="138" width="288" height="130"/>
+                                <rect key="frame" x="16" y="138" width="288" height="257"/>
                                 <string key="text">On behalf of our Board of Directors, Committee Members, volunteers and staff, I would like to thank you for supporting the Kenya Red Cross  Society through your contribution of {amount}.
 
 Your donation will go a long way to helping Kenya Red Cross Society  continue providing humanitarian services to the most vulnerable in the communities, thus alleviating human suffering.</string>
@@ -50,7 +50,7 @@ Your donation will go a long way to helping Kenya Red Cross Society  continue pr
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pEb-x7-E0W">
-                                <rect key="frame" x="8" y="302" width="304" height="62"/>
+                                <rect key="frame" x="8" y="429" width="304" height="62"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="abbas_profile_pic" translatesAutoresizingMaskIntoConstraints="NO" id="HZi-KQ-3m1">
                                         <rect key="frame" x="16" y="0.0" width="62" height="62"/>
@@ -102,6 +102,10 @@ Secretary General</string>
                     <constraint firstItem="Tnw-8Y-uW4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="V0b-4Y-MSL"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="donateMessageLabel" destination="rj0-YJ-cPw" id="6D5-RV-MB2"/>
+            </connections>
+            <point key="canvasLocation" x="396" y="395"/>
         </tableViewCell>
     </objects>
     <resources>
